[package]
name = "mpu6050"
version = "0.1.6"
authors = ["Julian Gaal <gjulian@uos.de>"]
edition = "2018"

description = "Platform agnostic driver for MPU6050 6-axis IMU"
repository = "https://github.com/juliangaal/mpu6050"
readme = "README.md"
keywords = ["mpu6050", "imu", "embedded"]
license = "MIT"

[dependencies]
embedded-hal = "^1.0.0"
libm = "0.2.1"

[dependencies.nalgebra]
default-features = false
version = "0.32.3"

[dev-dependencies]
i2cdev = "0.6.0"
linux-embedded-hal = "0.4.0"
